3.21.0 - 1.20.6 support & adjust broadcast msg to only show if player won
Took 5 minutes